chore(): unnecessery deps

--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "@syncano/cli": "0.13.0-alpha.4d352111"
   },
   "dependencies": {
-    "@eyedea/syncano": "0.2.0",
-    "archiver": "^2.0.3",
-    "unzip": "^0.1.11"
+    "@eyedea/syncano": "0.2.0"
   },
   "scripts": {
     "build": "npm run build:src && npm run build:env",
